Fix VE toolbar on smaller screens

--- a/resources/ext.yappin.main/styles.less
+++ b/resources/ext.yappin.main/styles.less
@@ -296,6 +296,10 @@ some comments are dropped from the database. In particular, mediawiki.skinning.i
 
 			.oo-ui-toolbar-bar {
 				background: var(--comments-secondary-background);
+
+				.oo-ui-toolbar-tools {
+					white-space: normal;
+				}
 			}
 		}
 
